# kube-exec-rs

./: Cargo.toml  README.md
src/: main.rs
src/cli/: command.rs
src/local_k8s/: pods.rs
