[package]
name = "kube-exec-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.85.0", features = ["default", "client", "runtime", "derive", "ws", "admission","rustls-tls"] }
k8s-openapi = { version = "0.19.0", features = ["v1_24"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
anyhow = "1.0.75"
serde_json = "1.0.106"
tokio-util = { version = "0.7.8", features = ["full"] }
thiserror = "1.0.48"
tower = { version = "0.4.13", features = ["full", "tokio"] }
hyper = { version = "0.14.27", features = ["full"] }
