[package]
name = "kube-exec-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.87.1", features = ["default", "client", "runtime", "derive", "ws", "admission"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
anyhow = "1.0.75"
serde_json = "1.0.108"
tokio-util = { version = "0.7.10", features = ["full"] }
thiserror = "1.0.50"
tower = { version = "0.4.13", features = ["full", "tokio"] }
hyper = { version = "0.14.27", features = ["full"] }
