[package]
name = "kube-exec-rs"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "1.1.0", features = [
    "client",
    "runtime",
    "derive",
    "ws",
    "admission",
    "kube-client",
] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.98"
serde_json = "1.0.108"
tokio-util = { version = "0.7.15", features = ["full"] }
